--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "@rainbow-me/rainbowkit": "^0.7.4",
+    "ethers": "^5.7.2",
+    "graphql": "^16.6.0",
+    "ipfs-http-client": "^59.0.0",
     "next": "13.0.0",
+    "omit-deep": "^0.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "urql": "^3.0.3",
+    "uuid": "^9.0.0",
+    "wagmi": "^0.7.7"
   },
   "devDependencies": {
     "eslint": "8.26.0",
